--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
-public/file/
+public/files/
 # Compiled output
 /dist
 /tmp
