--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.1.0",
     "@primeng/themes": "^19.0.5",
     "file-saver": "^2.0.5",
+    "pdfmake": "^0.2.18",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.5",
     "rxjs": "~7.8.0",
@@ -34,6 +35,7 @@
     "@angular/compiler-cli": "^19.1.0",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
+    "@types/pdfmake": "^0.2.11",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
