--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@primeng/themes": "^19.0.5",
+    "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "pdfmake": "^0.2.18",
     "primeicons": "^7.0.0",
@@ -26,7 +27,6 @@
     "rxjs": "~7.8.0",
     "tailwindcss-primeui": "^0.4.0",
     "tslib": "^2.3.0",
-    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
